--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nlw",
   "version": "1.0.0",
-  "description": "",
+  "description": "Site para procurar e cadastrar orfanatos",
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/server.js"
@@ -14,5 +14,14 @@
     "hbs": "^4.1.1",
     "nodemon": "^2.0.5",
     "sqlite-async": "^1.1.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/7Cass/happy-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/7Cass/happy-app/issues"
+  },
+  "homepage": "https://github.com/7Cass/happy-app#readme"
 }
